[BE]Create employee API (#15)
* create employee API
