# app/api/entities/employee.rb
@@ -1,0 +1,7 @@
+# frozen_string_literal: true
+
+module Entities
+  class Employee < Grape::Entity
+    expose :id, :organization_id, :name, :employee_code, :email, :birthday, :phone
+  end
+end
