# app/api/v1/employee_api.rb
@@ -1,0 +1,43 @@
+# frozen_string_literal: true
+
+class V1::EmployeeAPI < Grape::API
+  resource :employees do
+    before { authenticate! }
+
+    desc "Get information of all employees"
+    get do
+      employees = Employee.all
+      present employees, with: Entities::Employee
+    end
+
+    desc "Create employee"
+    params do
+      requires :name, type: String, allow_blank: false
+      requires :employee_code, type: String, allow_blank: false
+      requires :email, type: String, allow_blank: false
+      requires :password, type: String, allow_blank: false
+      optional :organization_id, type: Integer
+      optional :birthday, type: DateTime
+      optional :phone, type: String
+    end
+    post do
+      present Employee.create!(declared(params).to_h), with: Entities::Employee
+    end
+
+    route_param :id do
+      before do
+        @employee = Employee.find params[:id]
+      end
+
+      desc "Get employee's information"
+      get do
+        present @employee, with: Entities::Employee
+      end
+
+      desc "Delete employee"
+      delete do
+        present @employee.destroy, with: Entities::Employee
+      end
+    end
+  end
+end
